# datafusion-tracing

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  licenserc.toml  pre-commit.sh  rust-toolchain.toml  rustfmt.toml  taplo.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: feature_request.yml
.github/workflows/: ci.yml
ci/license/: header.txt
ci/scripts/: hawkeye_fmt.sh  readme_sync.sh  retry.sh  rust_clippy.sh  rust_docs.sh  rust_fmt.sh  rust_toml_fmt.sh
datafusion-tracing/: Cargo.toml
datafusion-tracing/src/: exec_instrument_macros.rs  exec_instrument_rule.rs  instrument_rule.rs  instrumented.rs  instrumented_exec.rs  lib.rs  metrics.rs  node.rs  options.rs  planner.rs  preview.rs  preview_utils.rs  rule_instrumentation.rs  rule_instrumentation_macros.rs  rule_options.rs  utils.rs
datafusion-tracing/src/snapshots/: pretty_format_all_constraints_narrow.snap  pretty_format_all_constraints_wide.snap  pretty_format_no_constraints.snap  pretty_format_table_width.snap
dev/: generate_tpch_parquet.sh  rust_lint.sh
examples/: Cargo.toml  distributed_otlp.rs  otlp.rs
instrumented-object-store/: Cargo.toml  README.md
instrumented-object-store/src/: instrumented_object_store.rs  lib.rs
integration-utils/: Cargo.toml
integration-utils/data/: nation.parquet  region.parquet
integration-utils/data/weather/: result-000000.parquet  result-000001.parquet  result-000002.parquet
integration-utils/queries/: order_nations.sql  recursive.sql  topk_lineitem.sql  tpch_scrabble.sql  weather.sql
integration-utils/queries/tpch/: q15.sql
integration-utils/src/: channel_resolver.rs  data.rs  lib.rs  query.rs  session.rs
integration-utils/src/distributed/: in_memory.rs  localhost.rs  mod.rs  trace_middleware.rs
tests/: Cargo.toml  integration_tests.rs
tests/snapshots/: 01_basic_trace.snap  02_basic_metrics_trace.snap  03_basic_preview_00_PlaceholderRowExec.snap  03_basic_preview_00_ProjectionExec.snap  03_basic_preview_01_ProjectionExec.snap  03_basic_preview_trace.snap  04_basic_compact_preview_01_ProjectionExec.snap  04_basic_compact_preview_trace.snap  05_basic_all_options_00_PlaceholderRowExec.snap  05_basic_all_options_01_ProjectionExec.snap  05_basic_all_options_trace.snap  06_object_store_all_options_00_DataSourceExec.snap  06_object_store_all_options_01_SortExec.snap  06_object_store_all_options_trace.snap  07_scrabble_all_options_00_AggregateExec.snap  07_scrabble_all_options_00_DataSourceExec.snap  07_scrabble_all_options_01_ProjectionExec.snap  07_scrabble_all_options_02_BoundedWindowAggExec.snap  07_scrabble_all_options_02_DataSourceExec.snap  07_scrabble_all_options_03_RepartitionExec.snap  07_scrabble_all_options_04_CoalesceBatchesExec.snap  07_scrabble_all_options_04_HashJoinExec.snap  07_scrabble_all_options_05_RepartitionExec.snap  07_scrabble_all_options_06_CoalesceBatchesExec.snap  07_scrabble_all_options_07_CoalesceBatchesExec.snap  07_scrabble_all_options_07_RepartitionExec.snap  07_scrabble_all_options_08_CoalesceBatchesExec.snap  07_scrabble_all_options_08_ProjectionExec.snap  07_scrabble_all_options_08_UnnestExec.snap  07_scrabble_all_options_09_CoalesceBatchesExec.snap  07_scrabble_all_options_09_UnnestExec.snap  07_scrabble_all_options_10_HashJoinExec.snap  07_scrabble_all_options_10_ProjectionExec.snap  07_scrabble_all_options_11_AggregateExec.snap  07_scrabble_all_options_11_HashJoinExec.snap  07_scrabble_all_options_12_ProjectionExec.snap  07_scrabble_all_options_13_ProjectionExec.snap  07_scrabble_all_options_14_AggregateExec.snap  07_scrabble_all_options_14_ProjectionExec.snap  07_scrabble_all_options_26_SortExec.snap  (+35 more)
tests/test_utils/: in_memory_writer.rs  insta_settings.rs  mod.rs  multi_buffer_writer.rs
