# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.
#
# This product includes software developed at Datadog (https://www.datadoghq.com/) Copyright 2025 Datadog, Inc.

[package]
name = "datafusion-tracing"
description = "DataFusion tracing of execution plans"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
keywords = ["datafusion", "tracing", "instrumentation", "analytics", "query-execution"]
categories = ["development-tools::debugging", "development-tools::profiling", "database", "asynchronous"]
readme = "../README.md"
repository = { workspace = true }
authors = { workspace = true }
rust-version = { workspace = true }
documentation = "https://docs.rs/datafusion-tracing"
homepage = "https://github.com/datafusion-contrib/datafusion-tracing"

[dependencies]
comfy-table = { version = "7.2" }
datafusion = { workspace = true }
delegate = "0.13"
futures = { workspace = true }
pin-project = "1.1"
tracing = { workspace = true }
tracing-futures = { workspace = true }
unicode-width = "0.2"

[dev-dependencies]
insta = { version = "1.44" }
tokio = { workspace = true }

[lints]
workspace = true
