# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.
#
# This product includes software developed at Datadog (https://www.datadoghq.com/) Copyright 2025 Datadog, Inc.

[package]
name = "instrumented-object-store"
description = "Object Store instrumentation through tracing"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
keywords = ["storage", "cloud", "object-store", "tracing", "instrumentation"]
categories = ["database", "asynchronous", "api-bindings", "filesystem"]
readme = "README.md"
repository = { workspace = true }
authors = { workspace = true }
rust-version = { workspace = true }
documentation = "https://docs.rs/instrumented-object-store"
homepage = "https://github.com/datafusion-contrib/datafusion-tracing"

[dependencies]
async-trait = "0.1"
bytes = "1.10"
futures = { workspace = true }
object_store = { version = "0.12.0", default-features = false }
tracing = { workspace = true }
tracing-futures = { workspace = true }

[dev-dependencies]
datafusion = { workspace = true }
url = { version = "2.5" }

[lints]
workspace = true
