# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.
#
# This product includes software developed at Datadog (https://www.datadoghq.com/) Copyright 2025 Datadog, Inc.

[package]
name = "integration-utils"
description = "DataFusion tracing integration utilities and helpers for examples and tests only (not for production use)"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
rust-version = { workspace = true }

[lints]
workspace = true

[dependencies]
arrow = "56.1"
arrow-flight = "56.1"
async-trait = "0.1"
datafusion = { workspace = true, features = ["parquet", "nested_expressions"] }
datafusion-distributed = { git = "https://github.com/datafusion-contrib/datafusion-distributed", branch = "main" }
datafusion-tracing = { workspace = true }
futures = { workspace = true }
hyper-util = "0.1"
instrumented-object-store = { workspace = true }
object_store = { version = "0.12.1", default-features = false }
tokio = { workspace = true, features = ["full"] }
tokio-stream = "0.1"
tonic = { version = "0.13", features = ["transport"] }
tower = "0.5"
tracing = { workspace = true }
url = { version = "2.5" }
